Bug 250242 - KMail composer address selection window lists contacts without email addresses
Summary: KMail composer address selection window lists contacts without email addresses
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-05 09:03 UTC by Aaron
Modified: 2011-09-23 12:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron 2010-09-05 09:03:41 UTC
Version:           1.13.5 (using KDE 4.4.5) 
OS:                Linux

When composing a new message in KMail, the "Select..." button pops a window that allows you to select a contact from KAddressBook. The correct behavior is to show only contacts which have email addresses, but version 1.13.5 shows all contacts in the selected address book (or all contacts if All is selected in the "Address book:" dropdown)

This is a regression. Correct behavior occurred for sure in KDE version 4.3.3.

Reproducible: Always

Steps to Reproduce:
Add one or more contacts to KAddressBook with no email address(es) specified.

Compose a new message in KMail.

Click "Select..." on the To line.



Actual Results:  
Observe the contact entries without email addresses being displayed.

Expected Results:  
Observe only contact entries WITH email addresses being displayed.
Comment 1 Christophe Marin 2011-05-01 01:14:32 UTC
Valid in KMail2, reassign
Comment 2 Martin Bednar 2011-09-23 12:03:24 UTC
Git commit 85e76e1ba24636a0c65306d2d1c2d5e49cae9aac by Matin Bednar.
Committed on 23/09/2011 at 13:57.
Pushed by bednar into branch 'master'.

Enable contact filtering by email address availability

BUG: 250242
FIXED-IN: 4.8
REVIEW: 102619

M  +22   -5    akonadi/contact/contactsfilterproxymodel.cpp
M  +15   -0    akonadi/contact/contactsfilterproxymodel.h
M  +1    -0    akonadi/contact/emailaddressselectionwidget.cpp

http://commits.kde.org/kdepimlibs/85e76e1ba24636a0c65306d2d1c2d5e49cae9aac