Enable contact filtering by email address availability

BUG: 250242
FIXED-IN: 4.8
REVIEW: 102619